[package]
name = "channels-maker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
serde = {version = "1.0.126", features = ["derive"]}
thiserror = "1.0.25"
lazy_static = "1.4.0"
clap = "3.0.0-beta.2"